<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:padding="20dp"
    tools:context="com.example.unifood.activities.LoginActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->


    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/app_icon"
            android:layout_marginTop="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/fullscreen_content"
            android:gravity="center_vertical"
            android:weightSum="1">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="e-mail"
                android:layout_gravity="center_horizontal"
                android:ems="15"
                android:id="@+id/email_field"
                android:layout_marginBottom="16dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="senha"
                android:layout_gravity="center_horizontal"
                android:ems="15"
                android:id="@+id/password_field"
                android:layout_marginBottom="16dp" />

            <Button
                android:id="@+id/login_button"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/entrar_button"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""/>

            <TextView
                android:id="@+id/sign_up_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Criar uma conta como estudante."
                android:layout_gravity="center_horizontal"
                android:textStyle="normal|bold"
                android:textSize="18sp"
                android:layout_weight="0.07" />

            <TextView
                android:id="@+id/sign_up_restaurant_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Registrar um restaurante."
                android:layout_gravity="center_horizontal"
                android:textStyle="normal|bold"
                android:textSize="18sp"
                android:paddingTop="10dp"
                android:layout_weight="0.06" />


        </LinearLayout>

    </FrameLayout>

</LinearLayout>