<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/user_update"
        android:orderInCategory="100"
        android:title="Editar Informações"
        app:showAsAction="never"/>

    <item
        android:id="@+id/user_delete"
        android:orderInCategory="100"
        android:title="Deletar conta"
        app:showAsAction="never"/>

    <item
        android:id="@+id/user_logout"
        android:orderInCategory="100"
        android:title="Sair"
        app:showAsAction="never"/>

</menu>