<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:layout_margin="6dp">

        <TextView
            android:id="@+id/rest_product_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toStartOf="@+id/rest_product_name"
            android:layout_toLeftOf="@+id/rest_product_name"
            android:layout_margin="10dp"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/rest_product_name"
            android:text="Nome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/rest_product_description"
            android:text="Descrição"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_below="@id/rest_product_cost"
            android:layout_alignParentLeft="true"
            android:textAppearance="?attr/textAppearanceListItem"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_below="@id/rest_product_description"
            android:background="#c0c0c0"/>

    </RelativeLayout>


</LinearLayout>
